<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="blazehouse_title">BlazeHouse</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="status_bar_clock_title"></string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">QS panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="themes_category">Themes</string>
    <string name="build_tweaks_summary_title">Get Amazed with Blaze !!!</string>
    <string name="listview">ListView</string>
    <string name="icons_category">Icon Options</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="qs_category">Quick Settings</string>
    <string name="general_category">General Settings</string>
    <string name="volume_category">Volume Settings</string>
    <string name="privacy_category">Privacy Indicators</string>
    <string name="spoof_category">Spoofing Options</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="unit_pixels" translatable="false">dp</string>
    <string name="blazehouse_dialog_title">Help us help you!</string>
    <string name="blazehouse_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="blazehouse_dialog_toast">READ THE WHOLE THING!</string>
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>
    <string name="theme_customization_category">Theming</string>
    <string name="theme_customization_font_title">Headline / Body font</string>
    <string name="theme_customization_font_summary">Set system font style</string>
    <string name="theme_customization_icon_shape_title">Icon shape</string>
    <string name="theme_customization_icon_shape_summary">Set system icon shape style</string>
    <string name="theme_customization_icon_pack_title">Icon pack</string>
    <string name="theme_customization_icon_pack_summary">Set custom icon pack style</string>
    <string name="theme_customization_device_default">Device default</string>
    <string name="theme_customization_signal_icon_title">Signal icon style</string>
    <string name="theme_customization_signal_icon_summary">Set custom signal icon style</string>
    <string name="theme_customization_wifi_icon_title">WiFi icon style</string>
    <string name="theme_customization_wifi_icon_summary">Set custom wifi icon style</string>
    <string name="theme_customization_brightness_slider_title">Brightness slider style</string>
    <string name="theme_customization_brightness_slider_summary">Set custom brightness slider style</string>
    <string name="theme_customization_data_title">Data icon style</string>
    <string name="theme_customization_data_summary">Set custom data icon style</string>
    <string name="theme_customization_navbar_title">Navbar style</string>
    <string name="theme_customization_navbar_summary">Set custom navigation bar style</string>
    <string name="network_traffic_state_title">Network traffic indicator</string>
    <string name="network_traffic_state_summary">Enable or disable network speed indicator in status bar</string>
    <string name="network_traffic_title">Network traffic indicator</string>
    <string name="network_traffic_master_switch_title">Use Network Traffic Indicator</string>
    <string name="network_options_title">Options</string>
    <string name="network_traffic_autohide_title">Hide network traffic indicator if inactive</string>
    <string name="network_traffic_autohide_summary">Hide when network traffic indicator is below 1 KB/s</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="data_disabled_icon_title">Show data disabled icon</string>
    <string name="data_disabled_icon_summary">Display the exclamation mark at the signal bar when data is disabled</string>
    <string name="roaming_indicator_icon_title">Show roaming indicator icon</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator above signal icon when in roaming mode</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="qs_panel_options_title">Quick settings</string>
    <string name="qs_panel_options_summary">Customize quick settings appearance</string>
    <string name="category_name_qs_tiles">QS tiles</string>
    <string name="qs_tile_shape">QS tile shape</string>
    <string name="qs_tile_round">Round</string>
    <string name="qs_tile_rect">Rounded Rectangle</string>
    <string name="qs_tile_mix">Round for active tiles and Rounded Rectangle for inactive tiles</string>
    <string name="category_name_qs_brightness_slider">Brightness slider</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Adjust brightness slider from the Quick Settings</string>
    <string name="qs_brightness_slider_never">Never show</string>
    <string name="qs_brightness_slider_expanded">Show when expanded</string>
    <string name="qs_brightness_slider_always">Show always</string>
    <string name="qs_brightness_slider_position_title">Brightness slider position</string>
    <string name="qs_brightness_slider_position_top">Top</string>
    <string name="qs_brightness_slider_position_bottom">Bottom</string>
    <string name="qs_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="qs_style_title">QS Panel style</string>
    <string name="qs_style_default">Android 14</string>
    <string name="qs_style_round">Android 11</string>
    <string name="qs_columns">QS columns in portrait (SystemUI restart required)</string>
    <string name="qs_columns_min" translatable="false">2</string>
    <string name="qs_columns_max" translatable="false">5</string>
    <string name="qs_columns_landscape">QS columns in landscape (SystemUI restart required)</string>
    <string name="qs_columns_landscape_min" translatable="false">@string/qs_columns_min</string>
    <string name="qs_columns_landscape_max" translatable="false">6</string>
    <string name="qqs_columns">QQS columns in portrait (SystemUI restart required)</string>
    <string name="qqs_columns_min" translatable="false">@string/qs_columns_min</string>
    <string name="qqs_columns_max" translatable="false">@string/qs_columns_max</string>
    <string name="qqs_columns_landscape">QQS columns in landscape (SystemUI restart required)</string>
    <string name="qqs_columns_landscape_min" translatable="false">@string/qs_columns_landscape_min</string>
    <string name="qqs_columns_landscape_max" translatable="false">@string/qs_columns_landscape_max</string>
    <string name="status_bar_clock_position_center">Center</string>
    <string name="status_bar_clock_position_left">Left</string>
    <string name="status_bar_clock_position_right">Right</string>
    <string name="status_bar_clock_position_title">Clock position</string>
    <string name="status_bar_am_pm_hidden">Hidden</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_title">Clock AM/PM style</string>
    <string name="status_bar_am_pm_unavailable">24-hour clock is enabled</string>
    <string name="status_bar_logo_title">Logo</string>
    <string name="status_bar_logo_summary">Display a custom logo on left or right of the status bar</string>
    <string name="status_bar_logo_position_title">Logo position</string>
    <string name="qs_transparency_title">Background transparency</string>
    <string name="qs_transparency_summary">Set transparency level for QS background</string>
    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="less_boring_heads_up_title">Priority heads up</string>
    <string name="less_boring_heads_up_summary">Show heads up only for calls, messages, alarms, reminders and priority conversations</string>
    <string name="qs_tiles_haptic_feedback_title">Vibrate on touching QS tiles</string>
    <string name="custom_battery_charging_icon_title">Charging icons</string>
    <string name="custom_battery_charging_icon_summary">Display charging icon on side of battery</string>
    <string name="custom_battery_charging_icon_style_title">Charging icons style</string>
    <string name="custom_battery_charging_icon_wh_title">Scale width &amp; height</string>
    <string name="custom_icon_charging_symbol_title">Charging symbol for battery text</string>
    <string name="custom_battery_drawable_title">Misc on Battery Drawable</string>
    <string name="custom_battery_scaled_perimeter_alpha_title">Scaled perimeter alpha</string>
    <string name="custom_battery_scaled_perimeter_alpha_summary">Use scaled perimeter alpha</string>
    <string name="custom_battery_scaled_fill_alpha_title">Use scaled back fill alpha</string>
    <string name="custom_battery_scaled_fill_alpha_summary">Scaled back fill alpha</string>
    <string name="custom_battery_color_title">Battery custom color</string>
    <string name="custom_battery_color_summary">Set to #ff000000 for default blend color</string>
    <string name="custom_battery_charging_color_title">Changing color</string>
    <string name="custom_battery_fill_color_title">Fill custom color</string>
    <string name="custom_battery_fill_grad_color_title">Fill gradient color</string>
    <string name="custom_battery_powersave_color_title">PowerSave color</string>
    <string name="custom_battery_powersave_fill_color_title">PowerSave fill color</string>
    <string name="custom_battery_rainbow_fill_title">Rainbow fill color</string>
    <string name="custom_battery_rainbow_fill_summary">Only for style Buddy &amp; Strip Path</string>
    <string name="sthumb_new_tint_picker_summary">use rgb color picker</string>
    <string name="custom_battery_layout_title">Misc on Battery Layout</string>
    <string name="custom_battery_rotation_title">Battery image rotation</string>
    <string name="custom_battery_dimension_title">Battery Custom Dimension</string>
    <string name="custom_battery_dimension_summary">use custom addjustable dimen values</string>
    <string name="custom_battery_height">Height</string>
    <string name="custom_battery_width">Width</string>
    <string name="custom_battery_top">Margin Top</string>
    <string name="custom_battery_bottom">Margin Bottom</string>
    <string name="custom_battery_left">Margin Left</string>
    <string name="custom_battery_right">Margin Right</string>
    <string name="settings_dashboard_style_title">Settings Styles</string>
</resources>