<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 Project Blaze
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/qs_customisation_title">

   <com.blaze.house.preferences.SecureSettingListPreference
       android:key="qs_style_round"
       android:title="@string/qs_style_title"
       android:entries="@array/qs_style_entries"
       android:entryValues="@array/qs_style_values"
       android:defaultValue="1" />

   <com.blaze.house.preferences.SecureSettingListPreference
       android:key="qs_tile_shape"
       android:title="@string/qs_tile_shape"
       android:entries="@array/qs_tile_shape_entries"
       android:entryValues="@array/qs_tile_shape_values"
       android:defaultValue="2" />

   <com.blaze.house.preferences.SecureSettingSeekBarPreference
       android:key="qqs_num_columns"
       android:title="@string/qqs_columns"
       android:min="@string/qqs_columns_min"
       android:max="@string/qqs_columns_max"
       android:defaultValue="5"
       settings:textStart="@string/qqs_columns_min"
       settings:textEnd="@string/qqs_columns_max" />

   <com.blaze.house.preferences.SecureSettingSeekBarPreference
       android:key="qqs_num_columns_landscape"
       android:title="@string/qqs_columns_landscape"
       android:min="@string/qqs_columns_landscape_min"
       android:max="@string/qqs_columns_landscape_max"
       android:defaultValue="6"
       settings:textStart="@string/qqs_columns_landscape_min"
       settings:textEnd="@string/qqs_columns_landscape_max" />

   <com.blaze.house.preferences.SecureSettingSeekBarPreference
       android:key="qs_num_columns"
       android:title="@string/qs_columns"
       android:min="@string/qs_columns_min"
       android:max="@string/qs_columns_max"
       android:defaultValue="4"
       settings:textStart="@string/qs_columns_min"
       settings:textEnd="@string/qs_columns_max" />

   <com.blaze.house.preferences.SecureSettingSeekBarPreference
       android:key="qs_num_columns_landscape"
       android:title="@string/qs_columns_landscape"
       android:min="@string/qs_columns_landscape_min"
       android:max="@string/qs_columns_landscape_max"
       android:defaultValue="6"
       settings:textStart="@string/qs_columns_landscape_min"
       settings:textEnd="@string/qs_columns_landscape_max" />      
   
   <com.blaze.house.preferences.CustomSystemSeekBarPreference
       android:key="qs_transparency"
       android:title="@string/qs_transparency_title"
       android:summary="@string/qs_transparency_summary"
       android:defaultValue="100"
       settings:interval="1"
       settings:units="%"
       android:max="100"
       android:min="1" />

   <com.blaze.house.preferences.SecureSettingSwitchPreference
       android:key="quick_settings_vibrate"
       android:title="@string/quick_settings_vibrate_title"
       android:summary="@string/quick_settings_vibrate_summary"
       android:defaultValue="false"/>

</PreferenceScreen>
