<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:title="@string/category_name_qs_brightness_slider">

        <com.blaze.house.preferences.SecureSettingListPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/qs_brightness_slider_title"
            android:entries="@array/qs_brightness_slider_entries"
            android:entryValues="@array/qs_brightness_slider_values"
            android:defaultValue="1" />

        <com.blaze.house.preferences.SecureSettingListPreference
            android:key="qs_brightness_slider_position"
            android:title="@string/qs_brightness_slider_position_title"
            android:entries="@array/qs_brightness_slider_position_entries"
            android:entryValues="@array/qs_brightness_slider_position_values"
            android:defaultValue="0" />

        <com.blaze.house.preferences.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/qs_auto_brightness_title"
            android:summary="@string/qs_auto_brightness_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/qs_category">

	<com.blaze.house.preferences.SystemSettingSeekBarPreference
            android:key="qs_transparency"
            android:title="@string/qs_transparency_title"
            android:summary="@string/qs_transparency_summary"
            android:defaultValue="100"
            settings:interval="1"
            settings:units="%"
            android:max="100"
            android:min="1" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/general_category">

	<com.blaze.house.preferences.SystemSettingSwitchPreference
            android:key="notification_sound_vib_screen_on"
            android:title="@string/notification_sound_vib_screen_on_title"
            android:summary="@string/notification_sound_vib_screen_on_summary"
            android:defaultValue="true" />

	<com.blaze.house.preferences.SystemSettingSwitchPreference
            android:key="less_boring_heads_up"
            android:title="@string/less_boring_heads_up_title"
            android:summary="@string/less_boring_heads_up_summary"
            android:defaultValue="false" />

	<!-- QS Tiles haptic -->
        <com.blaze.house.preferences.SystemSettingSwitchPreference
            android:key="qs_tiles_haptic_feedback"
            android:title="@string/qs_tiles_haptic_feedback_title"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
