<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    
     <PreferenceCategory
        android:title="@string/lock_screen_custom_clock_face_category">

        <ListPreference
            android:key="lock_screen_custom_clock_face"
            android:summary="%s"
            android:title="@string/lock_screen_custom_clock_face_title"
            android:entries="@array/lock_screen_custom_clock_face_entries"
            android:entryValues="@array/lock_screen_custom_clock_face_values" />

    </PreferenceCategory>
 
    <PreferenceCategory
        android:title="@string/theme_category">

    <!-- Theming -->
    	<Preference
            android:key="android.theme.customization.fonts"
            android:title="@string/theme_customization_font_title"
            android:summary="@string/theme_customization_font_summary"
            android:fragment="com.blaze.house.fragments.FontsPicker"/>

        <Preference
            android:key="android.theme.customization.icon_pack"
            android:title="@string/theme_customization_icon_pack_title"
            android:summary="@string/theme_customization_icon_pack_summary"
            android:fragment="com.blaze.house.fragments.StatusbarIcons"/>
            
       <Preference
            android:key="android.theme.customization.signal_icon"
            android:title="@string/theme_customization_signal_icon_title"
            android:summary="@string/theme_customization_signal_icon_summary"
            android:fragment="com.blaze.house.fragments.SignalIcons"/>

       <Preference
            android:key="android.theme.customization.wifi_icon"
            android:title="@string/theme_customization_wifi_icon_title"
            android:summary="@string/theme_customization_wifi_icon_summary"
            android:fragment="com.blaze.house.fragments.WifiIcons"/>      

        <Preference
            android:key="android.theme.customization.adaptive_icon_shape"
            android:title="@string/theme_customization_icon_shape_title"
            android:summary="@string/theme_customization_icon_shape_summary"
            android:fragment="com.blaze.house.fragments.IconShapes"/> 
            
        <com.blaze.house.preferences.SystemSettingListPreference
            android:key="settings_dashboard_style"
            android:title="@string/settings_dashboard_style_title"
            android:entries="@array/settings_dashboard_style_entries"
            android:entryValues="@array/settings_dashboard_style_values"
            android:defaultValue="0" />
        </PreferenceCategory>
</PreferenceScreen>
